--- a/app/views/users/healthrecord.html.erb
+++ b/app/views/users/healthrecord.html.erb
@@ -4,6 +4,8 @@
 
 
 <div class="row">
+  <p id="notice"><%= notice %></p>
+
   <div id="wrapper">
       <div class="container" id="dashboardbody">
             <div class="healthupload">
