--- a/app/views/users/theme/_sidebar_menu.html.erb
+++ b/app/views/users/theme/_sidebar_menu.html.erb
@@ -61,7 +61,15 @@
       </li>
 
       <li>
-        <a href="mailto:admin@vitalsynapse.com?Subject=Enquiries" target="_top">About Us</a>
+        <a><i class="fa fa-user"></i> About Us <span class="fa fa-chevron-down"></span></a>
+        <ul class="nav child_menu" style="display: none;">
+          <li>
+            <a href="mailto:admin@vitalsynapse.com?Subject=Enquiries" target="_top">Contact Us</a>
+          </li>
+
+
+        </ul>
+
       </li>
     </ul>
     <% end %>
