--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,7 +30,8 @@
     <%= f.date_field(:dob) %>
   </div>
   <div class="field">
-    <%= f.select :blood_group, ["A+", "A-", "B+", "B-", "AB+", "AB-", "O+", "O-", "Not Sure"]%>
+    <%= f.select :blood_group, ["A+", "A-", "B+", "B-", "AB+", "AB-", "O+", "O-", "Not Sure
+      "]%>
   </div>
 
   <div class="field">
