--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -13,7 +13,8 @@
     </div>
     <br>
 
-
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#getStarted">Get Started</button>
+    <%= render "get_started" %>
     <div class="cards animated bounceInRight">
         <!-- GENERAL INFO -->
         <p id="notice"><%= notice %></p>
