--- a/app/views/users/_get_started_images.html.erb
+++ b/app/views/users/_get_started_images.html.erb
@@ -12,7 +12,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item">
-        <%= image_tag("export.png", class: "mg-center" ) %><br>
+        <%= image_tag("/assets/images/export.png", class: "mg-center" ) %><br>
         1. GET STARTED
         <ul>
           <li> Update your profile for us to know you more. </li>
