--- a/app/views/users/_get_started_images.html.erb
+++ b/app/views/users/_get_started_images.html.erb
@@ -11,8 +11,10 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item">
-        <%= image_tag("/assets/images/export.png", class: "mg-center" ) %><br>
+      <div class="item active">
+        <img src="/assets/images/export.png" alt="Flower" width="460" height="345" class="mg-center">
+
+        <!-- <%= image_tag("export.png", class: "mg-center" ) %><br> -->
         1. GET STARTED
         <ul>
           <li> Update your profile for us to know you more. </li>
@@ -20,7 +22,7 @@
         </ul>
       </div>
 
-      <div class="item active">
+      <div class="item ">
         <%= image_tag("upload.png", class: "mg-center", height:"1000" ) %><br>
         2. HEALTH UPLOAD
         <ul>
