--- a/app/views/users/_get_started.html.erb
+++ b/app/views/users/_get_started.html.erb
@@ -5,7 +5,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">HOW IT WORRKS?</h4>
+          <h4 class="modal-title">HOW IT WORKS?</h4>
         </div>
         <div class="modal-body">
           <%= render "get_started_images" %>
