script for all pages

--- a/app/views/users/_get_started_images.html.erb
+++ b/app/views/users/_get_started_images.html.erb
@@ -12,9 +12,9 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="/assets/images/export.png" alt="Flower" width="460" height="345" class="mg-center">
+        <!-- <img src="/assets/images/export.png" alt="Flower" width="460" height="345" class="mg-center"> -->
 
-        <!-- <%= image_tag("export.png", class: "mg-center" ) %><br> -->
+        <%= image_tag("update.png", class: "mg-center", height: "5000" ) %><br>
         1. GET STARTED
         <ul>
           <li> Update your profile for us to know you more. </li>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="item ">
-        <%= image_tag("upload.png", class: "mg-center", height:"1000" ) %><br>
+        <%= image_tag("uploadtwo.png", class: "mg-center", height:"5000" ) %><br>
         2. HEALTH UPLOAD
         <ul>
           <li> Snap picture or select document from folder </li>
@@ -34,7 +34,7 @@
 
 
       <div class="item">
-        <%= image_tag("healthrecord.png", class: "mg-center", height:"1000" ) %><br>
+        <%= image_tag("healthuploadtwo.png", class: "mg-center", height:"5000" ) %><br>
         3. Health Record
         <ul>
         <li> View your uploaded health documents</li>
