--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -1,3 +1,16 @@
+<script src="//fast.appcues.com/18522.js"></script>
+
+<script>
+  Appcues.identify('<%= current_user.id %>', {
+      email: '<%= current_user.email %>',
+      name: '<%= current_user.full_name %>',
+      // Additional user properties
+  });
+</script>
+
+
+
+
 <div class="container">
     <div class="row animated bounceInLeft">
         <br>
