--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -1,13 +1,14 @@
-<script src="//fast.appcues.com/18522.js"></script>
-
-<script>
-  Appcues.identify('<%= current_user.id %>', {
-      email: '<%= current_user.email %>',
-      name: '<%= current_user.full_name %>',
-      // Additional user properties
-  });
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/576b5e203015183254f4cd27/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
 </script>
-
 
 
 
