--- a/app/assets/stylesheets/user/custom.css
+++ b/app/assets/stylesheets/user/custom.css
@@ -1,223 +1,8 @@
-body.nav-sm .container.body .left_col {
-  width: 70px;
-  padding: 0;
-  height: 100%;
-  z-index: 200;
-  position: absolute;
+@font-face {
+  font-family: "Sans-Serif";
+  src: url(/assets/fonts/Roboto-Regular.ttf) format("truetype");
 }
 
-body.nav-sm .container.body .right_col {
-  padding: 10px 20px;
-  margin-left: 70px;
-  z-index: 2;
-}
-body.nav-sm .navbar.nav_title {
-  width: 70px;
-}
-body.nav-sm .navbar.nav_title a span {
-  display: none;
-}
-body.nav-sm .navbar.nav_title a i {
-  font-size: 27px;
-  margin: 13px 0 0 3px;
-}
-.site_title i {
-  border: 1px solid #EAEAEA;
-  padding: 5px 6px;
-  border-radius: 50%;
-}
-body.nav-sm .main_container .top_nav {
-  display: block;
-  margin-left: 70px;
-  z-index: 2;
-}
-body.nav-sm .nav.side-menu li a {
-  text-align: center !important;
-  font-weight: 400;
-  font-size: 10px;
-  padding: 10px 5px;
-}
-body.nav-sm .nav.side-menu li.active-sm {
-  border-right: 5px solid #1ABB9C;
-}
-body.nav-sm > .nav.side-menu > li.active-sm > a {
-  color: #1ABB9C !important;
-}
-body.nav-sm .nav.side-menu li a i.toggle-up {
-  display: none !important;
-}
-body.nav-sm .nav.side-menu li a i {
-  font-size: 25px !important;
-  text-align: center;
-  width: 100% !important;
-  margin-bottom: 5px;
-}
-body.nav-sm ul.nav.child_menu {
-  left: 100%;
-  position: absolute;
-  top: 0;
-  padding: 10px;
-  width: 210px;
-  z-index: 4000;
-  background: #3E5367;
-  display: none;
-}
-body.nav-sm ul.nav.child_menu li {
-  padding-left: 0;
-}
-body.nav-sm ul.nav.child_menu li a {
-  text-align: left !important;
-}
-body.nav-sm .profile {
-  display: none;
-}
-.menu_section {
-  margin-bottom: 35px;
-}
-.menu_section h3 {
-  padding-left: 23px;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: .5px;
-  font-weight: bold;
-  font-size: 11px;
-  margin-bottom: 0;
-  margin-top: 0;
-  text-shadow: 1px 1px #000;
-}
-.menu_section >ul {
-  margin-top: 10px;
-}
-.profile_pic {
-  width: 35%;
-  float: left;
-}
-.img-circle.profile_img {
-  width: 70%;
-  background: #fff;
-  margin-left: 15%;
-  z-index: 1000;
-  position: inherit;
-  margin-top: 20px;
-  border: 1px solid rgba(52, 73, 94, 0.44);
-  padding: 4px;
-}
-.profile_info {
-  padding: 25px 10px 10px;
-  width: 65%;
-  float: left;
-}
-.profile_info span {
-  font-size: 13px;
-  line-height: 30px;
-  color: #BAB8B8;
-}
-.profile_info h2 {
-  font-size: 14px;
-  color: #ECF0F1;
-  margin: 0;
-  font-weight: 300;
-}
-.profile.img_2 {
-  text-align: center;
-}
-.profile.img_2 .profile_pic {
-  width: 100%;
-}
-.profile.img_2 .profile_pic .img-circle.profile_img {
-  width: 50%;
-  margin: 10px 0 0;
-}
-.profile.img_2 .profile_info {
-  padding: 15px 10px 0;
-  width: 100%;
-  margin-bottom: 10px;
-  float: left;
-}
-#sidebar-menu span.fa {
-  float: right;
-  text-align: center;
-  margin-top: 5px;
-  font-size: 10px !important;
-  min-width: inherit;
-  color: #C4CFDA;
-}
-.active a span.fa {
-  text-align: right !important;
-  margin-right: 4px;
-}
-body.nav-sm .menu_section {
-  margin: 0;
-}
-body.nav-sm span.fa, body.nav-sm .menu_section h3 {
-  display: none !important;
-}
-.nav_menu {
-  float: left;
-  background: #EDEDED;
-  border-bottom: 1px solid #D9DEE4;
-  margin-bottom: 10px;
-  width: 100%;
-  position: relative;
-}
-@media (min-width: 480px) {
-  .nav_menu {
-    position: static;
-  }
-}
-body.nav-md .container.body .col-md-3.left_col {
-  width: 230px;
-  padding: 0;
-  position: absolute;
-  display: flex;
-}
-body .container.body .right_col {
-  background: white;
-}
-body.nav-md .container.body .right_col {
-  padding: 10px 20px 0;
-  margin-left: 230px;
-}
-.nav_title {
-  width: 230px;
-  float: left;
-  background: rgb(255, 255, 255);
-  border-radius: 0;
-  height: 57px;
-}
-@media (max-width: 991px) {
-  body.nav-md .container.body .right_col, body.nav-md .container.body .top_nav {
-    width: 100%;
-    margin: 0;
-  }
-  body.nav-md .container.body .col-md-3.left_col {
-    display: none;
-  }
-  body.nav-md .container.body .right_col {
-    width: 100%;
-    padding-right: 0
-  }
-  .right_col {
-    padding: 10px !important;
-  }
-}
-@media (max-width: 1200px) {
-  .x_title h2 {
-    width: 62%;
-    font-size: 17px;
-  }
-  .tile, .graph {
-    zoom: 85%;
-    height: inherit;
-  }
-}
-@media (max-width: 1270px) and (min-width: 192px) {
-  .x_title h2 small {
-    display: none
-  }
-}
-
-/**  ------------------------------------------  **/
 
 .blue {
   color: #3498DB;
@@ -300,15 +85,18 @@ body.nav-md .container.body .right_col {
 .top_nav .nav>li>a:focus, .top_nav .nav>li>a:hover, .top_nav .nav .open>a, .top_nav .nav .open>a:focus, .top_nav .nav .open>a:hover {
   background: #D9DEE4;
 }
+
 body {
   color: black;
   background: rgb(208, 23, 18);
   /*#ECF0F1; #FCFCFC*/
-  font-family: Sans-Serif;
+  /*font-family: Sans-Serif;*/
+  font-family: 'Roboto-Regular', sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.471;
 }
+
 .main_container .top_nav {
   display: block;
   margin-left: 230px;
