--- a/app/views/pages/theme/_footer.html.erb
+++ b/app/views/pages/theme/_footer.html.erb
@@ -1,6 +1,8 @@
+<%= stylesheet_link_tag "pages" %>
+
 <br>
-<div id="top"></div>
-<footer>
+<!-- <div id="top"></div> -->
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
