--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,13 @@
 <br>
-<h2>Sign up</h2>
-<p id="notice"><%= notice %></p>
+
+<!-- <p id="notice"><%#= notice %></p> -->
 
 <div class="content-section-login center">
-        <div class="container">
+        <div class="container" style="margin-top: 100px; margin-bottom: 100px;>
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-8 col-lg-offset-2 col-lg-8">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Get Started Now</h2>
+                    <h2 class="section-heading" style="text-align: center;">Get Started Now</h2>
 
                     <div class="row">
                       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -49,11 +49,7 @@
                         </div>
                       </div>
                       <% end %>
-
-
-
                     </div>
-                    <%= render "devise/shared/links" %>
                     <!-- row end-->
                 </div>
             </div>
