--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,7 +1,6 @@
-<%- if controller_name != 'sessions' %>
+<%- if controller_name != 'sessions' && controller_name != 'registrations'  %>
   <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-danger btn-block"%><br />
   <%#= link_to "LOG IN/SIGN UP WITH FACEBOOK", user_omniauth_authorize_path(:facebook), class: "btn btn-success btn-block" %>
-
 <% end -%>
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
@@ -13,8 +12,7 @@
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
 <%#= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
-<p>Not yet a member? <%= link_to "Sign up", new_registration_path(resource_name), class:"btn btn-success" %> for free!</p>
-
+<p>Not yet a member? <%= link_to "Sign up", new_registration_path(resource_name), class:"navbar-custom", style:"font-weight: bold;;"  %> for free!</p>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
